labs/networkpolicy-lab-01/manifests/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networkpolicy-lab-01
  labels:
    purpose: networkpolicy-lab
---
apiVersion: v1
kind: Namespace
metadata:
  name: trusted-client
  labels:
    access: trusted
---
apiVersion: v1
kind: Namespace
metadata:
  name: untrusted-client
  labels:
    access: untrusted
