labs/networkpolicy-lab-01/manifests/03-local-clients.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: same-allowed-client
  namespace: networkpolicy-lab-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
      access: web
  template:
    metadata:
      labels:
        app: client
        access: web
    spec:
      containers:
        - name: client
          image: busybox:1.36
          command:
            - /bin/sh
            - -c
            - sleep 36000
          resources:
            requests:
              cpu: 2m
              memory: 8Mi
            limits:
              cpu: 20m
              memory: 24Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: same-blocked-client
  namespace: networkpolicy-lab-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
      access: blocked
  template:
    metadata:
      labels:
        app: client
        access: blocked
    spec:
      containers:
        - name: client
          image: busybox:1.36
          command:
            - /bin/sh
            - -c
            - sleep 36000
          resources:
            requests:
              cpu: 2m
              memory: 8Mi
            limits:
              cpu: 20m
              memory: 24Mi
