labs/networkpolicy-lab-01/manifests/05-web-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-ingress
  namespace: networkpolicy-lab-01
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: web
      ports:
        - protocol: TCP
          port: 80
    - from:
        - namespaceSelector:
            matchLabels:
              access: trusted
          podSelector:
            matchLabels:
              access: web
      ports:
        - protocol: TCP
          port: 80
